# fmri-nuisance-effects

./: .pylintrc  LICENSE  README.md  __init__.py  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
examples/: example01.py  example02.py  example03.py
fmri_nuisance_effects/: __init__.py  model_utils.py  nuisanceeffects.py  nuisanceeffects_test.py
