[metadata]
name = fmri-nuisance-effects
author = The fmri-nuisance-effects authors
maintainer = Søren A. Fuglsang
license_files = LICENSE
version = 0.0.1
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
description = Exploring effects of nuisance features on BOLD fMRI data
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
include_package_data = True
python_requires >= 3.6
packages = find:
install_requires =
    matplotlib
    numpy
    nibabel
    absl-py
    nilearn

[options.extras_require]
test =
     pytest
    

 
